--- a/my_profile.html
+++ b/my_profile.html
@@ -1,10 +1,32 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html>
-<head>
-<title>Good movies</title>
+<head> 
+	<title>Good Movies</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="styl_movies.css" type="text/css" >
 </head>
-<body>
-<p>Pierwszy tekst</p>
-</body>
-</html>
 
+<body> 
+	<div id="baner">
+		<a href="https://google.pl">Good movies</a>
+		<form>
+		<input type="text" placeholder="jaki film chcesz dziś obejrzeć?">
+		<button type="submit">Szukaj</button>
+		</form>
+		<a href="https://google.pl">Mój profil</a>
+		<a href="https://google.pl">Zaloguj</a></br>
+	</div>
+	<img src="obrazek.jpg" alt="błąd wczytywania grafiki" >
+	<p>IMIE I NAZWISKO</p>
+	<p>konto aktywne od:07.01.2021.</p>
+	<ul>
+		<li><a href="https://google.pl">Recenzje<a/>
+		<li><a href="https://google.pl">Polecone<a/>
+		<li><a href="https://google.pl">Ocenione<a/>
+		<li><a href="https://google.pl">Ulubione<a/>
+	</ul>
+</body>
+<footer>
+	<p>All rights reserved 2021</p>	
+</footer>
+</html>
